--- a/.bootstraprc
+++ b/.bootstraprc
@@ -19,7 +19,7 @@ styleLoaders:
 # It depends on value of NODE_ENV environment variable
 # This param can also be set in webpack config:
 #   entry: 'bootstrap-loader/extractStyles'
-extractStyles: false
+extractStyles: true
 # env:
 #   development:
 #     extractStyles: false
@@ -35,7 +35,7 @@ extractStyles: false
 # For example, _variables.scss contains:
 # $input-color: $gray !default;
 # This means you can define $input-color before we load _variables.scss
-preBootstrapCustomizations: ./app/styles/bootstrap/pre-customizations.scss
+# preBootstrapCustomizations: ./app/styles/bootstrap/pre-customizations.scss
 
 # This gets loaded after bootstrap/variables is loaded and before bootstrap is loaded.
 # A good example of this is when you want to override a bootstrap variable to be based
@@ -49,12 +49,12 @@ preBootstrapCustomizations: ./app/styles/bootstrap/pre-customizations.scss
 # this in bootstrapCustomizations to make the input height 10% bigger than the default calculation.
 # Thus you can leverage the default calculations.
 # $input-height: $input-height * 1.10;
-bootstrapCustomizations: ./app/styles/bootstrap/customizations.scss
+# bootstrapCustomizations: ./app/styles/bootstrap/customizations.scss
 
 # Import your custom styles here. You have access to all the bootstrap variables. If you require
 # your sass files separately, you will not have access to the bootstrap variables, mixins, clases, etc.
 # Usually this endpoint-file contains list of @imports of your application styles.
-appStyles: ./app/styles/app.scss
+# appStyles: ./app/styles/app.scss
 
 ### Bootstrap styles
 styles:
