--- a/package.json
+++ b/package.json
@@ -65,10 +65,12 @@
   },
   "homepage": "https://github.com/KaiserY/learn-avalon-webpack#readme",
   "dependencies": {
-    "avalon2": "^2.2.6",
+    "avalon2": "^2.2.7",
     "bootstrap-sass": "^3.3.7",
+    "clipboard": "^1.6.1",
     "es5-shim": "^4.5.9",
-    "es6-promise": "^4.1.0"
+    "es6-promise": "^4.1.0",
+    "localforage": "^1.5.0"
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
@@ -79,6 +81,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "better-npm-run": "0.0.15",
+    "bootstrap-loader": "^2.1.0",
     "chai": "^3.5.0",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.1",
@@ -98,10 +101,13 @@
     "karma-phantomjs-launcher": "^1.0.4",
     "karma-webpack": "^2.0.3",
     "mocha": "^3.3.0",
+    "node-sass": "^4.5.2",
     "phantomjs-prebuilt": "^2.1.14",
     "postcss-cssnext": "^2.10.0",
-    "postcss-loader": "^2.0.1",
+    "postcss-loader": "^2.0.5",
+    "resolve-url-loader": "^2.0.2",
     "rimraf": "^2.6.1",
+    "sass-loader": "^6.0.5",
     "style-loader": "^0.17.0",
     "text-loader": "0.0.1",
     "url-loader": "^0.5.8",
