--- a/package.json
+++ b/package.json
@@ -1,124 +1,128 @@
 {
-  "name": "learn-avalon-webpack",
-  "version": "0.0.1",
-  "description": "avalon webpack",
-  "scripts": {
-    "clean": "rimraf build",
-    "start": "better-npm-run dev",
-    "build": "npm run clean && better-npm-run build",
-    "deploy": "npm run clean && npm run build",
-    "test": "better-npm-run test",
-    "test:dev": "better-npm-run test:dev",
-    "test:coveralls": "cat ./build/coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
-    "visualizer": "better-npm-run visualizer",
-    "report-coverage": "codecov",
-    "cnpm": "npm install cnpm -g --registry=https://registry.npm.taobao.org",
-    "installKarma": "npm install mocha chai karma karma-coverage karma-mocha karma-webpack karma-phantomjs-launcher phantomjs-prebuilt"
-  },
-  "betterScripts": {
-    "dev": {
-      "command": "node ./server/main",
-      "env": {
-        "NODE_ENV": "development"
-      }
+    "name": "learn-avalon-webpack",
+    "version": "0.0.1",
+    "description": "avalon webpack",
+    "scripts": {
+        "clean": "rimraf build",
+        "start": "better-npm-run dev",
+        "build": "npm run clean && better-npm-run build",
+        "deploy": "npm run clean && npm run build",
+        "test": "better-npm-run test",
+        "test:dev": "better-npm-run test:dev",
+        "test:coveralls": "cat ./build/coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
+        "visualizer": "better-npm-run visualizer",
+        "report-coverage": "codecov",
+        "cnpm": "npm install cnpm -g --registry=https://registry.npm.taobao.org",
+        "installKarma": "npm install mocha chai karma karma-coverage karma-mocha karma-webpack karma-phantomjs-launcher phantomjs-prebuilt"
     },
-    "build": {
-      "command": "webpack --config config/webpack/webpack.build",
-      "env": {
-        "NODE_ENV": "production"
-      }
+    "betterScripts": {
+        "dev": {
+            "command": "node ./server/main",
+            "env": {
+                "NODE_ENV": "development"
+            }
+        },
+        "build": {
+            "command": "webpack --config config/webpack/webpack.build",
+            "env": {
+                "NODE_ENV": "production"
+            }
+        },
+        "test": {
+            "command": "node ./node_modules/karma/bin/karma start config/karma.conf",
+            "env": {
+                "NODE_ENV": "production",
+                "NODE_TEST": "production"
+            }
+        },
+        "test:dev": {
+            "command": "node ./node_modules/karma/bin/karma start config/karma.conf",
+            "env": {
+                "NODE_ENV": "production",
+                "NODE_TEST": "development"
+            }
+        },
+        "visualizer": {
+            "command": "webpack --config config/webpack/webpack.build",
+            "env": {
+                "NODE_ENV": "production",
+                "NODE_TEST": "production"
+            }
+        }
     },
-    "test": {
-      "command": "node ./node_modules/karma/bin/karma start config/karma.conf",
-      "env": {
-        "NODE_ENV": "production",
-        "NODE_TEST": "production"
-      }
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/KaiserY/learn-avalon-webpack.git"
     },
-    "test:dev": {
-      "command": "node ./node_modules/karma/bin/karma start config/karma.conf",
-      "env": {
-        "NODE_ENV": "production",
-        "NODE_TEST": "development"
-      }
+    "keywords": [
+        "avalon",
+        "webpack"
+    ],
+    "author": "KaiserY",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/KaiserY/learn-avalon-webpack/issues"
     },
-    "visualizer": {
-      "command": "webpack --config config/webpack/webpack.build",
-      "env": {
-        "NODE_ENV": "production",
-        "NODE_TEST": "production"
-      }
-    }
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/KaiserY/learn-avalon-webpack.git"
-  },
-  "keywords": [
-    "avalon",
-    "webpack"
-  ],
-  "author": "KaiserY",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/KaiserY/learn-avalon-webpack/issues"
-  },
-  "homepage": "https://github.com/KaiserY/learn-avalon-webpack#readme",
-  "dependencies": {
-    "avalon2": "^2.2.7",
-    "bootstrap-sass": "^3.3.7",
-    "clipboard": "^1.6.1",
-    "es5-shim": "^4.5.9",
-    "es6-promise": "^4.1.0",
-    "localforage": "^1.5.0"
-  },
-  "devDependencies": {
-    "babel-core": "^6.24.1",
-    "babel-loader": "^7.0.0",
-    "babel-plugin-istanbul": "^4.1.3",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-polyfill": "^6.23.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "better-npm-run": "0.0.15",
-    "bootstrap-loader": "^2.1.0",
-    "chai": "^3.5.0",
-    "copy-webpack-plugin": "^4.0.1",
-    "css-loader": "^0.28.1",
-    "es3ify-loader": "^0.2.0",
-    "eslint": "^3.19.0",
-    "eslint-config-google": "^0.7.1",
-    "express": "^4.15.2",
-    "extract-text-webpack-plugin": "^2.1.0",
-    "file-loader": "^0.11.1",
-    "glob": "^7.1.1",
-    "happypack": "^3.0.3",
-    "html-loader": "^0.4.5",
-    "html-webpack-plugin": "^2.28.0",
-    "karma": "^1.7.0",
-    "karma-coverage": "^1.1.1",
-    "karma-mocha": "^1.3.0",
-    "karma-phantomjs-launcher": "^1.0.4",
-    "karma-webpack": "^2.0.3",
-    "mocha": "^3.3.0",
-    "node-sass": "^4.5.2",
-    "phantomjs-prebuilt": "^2.1.14",
-    "postcss-cssnext": "^2.10.0",
-    "postcss-loader": "^2.0.5",
-    "resolve-url-loader": "^2.0.2",
-    "rimraf": "^2.6.1",
-    "sass-loader": "^6.0.5",
-    "style-loader": "^0.17.0",
-    "text-loader": "0.0.1",
-    "url-loader": "^0.5.8",
-    "webpack": "^2.5.1",
-    "webpack-dashboard": "^0.4.0",
-    "webpack-dev-middleware": "^1.10.2",
-    "webpack-dev-server": "^2.4.5",
-    "webpack-hot-middleware": "^2.18.0",
-    "webpack-md5-hash": "0.0.5",
-    "webpack-merge": "^4.1.0",
-    "webpack-visualizer-plugin": "^0.1.11"
-  },
-  "peerDependencies": {}
+    "homepage": "https://github.com/KaiserY/learn-avalon-webpack#readme",
+    "dependencies": {
+        "avalon2": "^2.2.7",
+        "bootstrap-notify": "^3.1.3",
+        "bootstrap-sass": "^3.3.7",
+        "bootstrap3-dialog": "^1.35.4",
+        "clipboard": "^1.6.1",
+        "es5-shim": "^4.5.9",
+        "es6-promise": "^4.1.0",
+        "localforage": "^1.5.0"
+    },
+    "devDependencies": {
+        "babel-core": "^6.24.1",
+        "babel-loader": "^7.0.0",
+        "babel-plugin-istanbul": "^4.1.3",
+        "babel-plugin-transform-runtime": "^6.23.0",
+        "babel-polyfill": "^6.23.0",
+        "babel-preset-es2015": "^6.24.1",
+        "babel-preset-stage-2": "^6.24.1",
+        "better-npm-run": "0.0.15",
+        "bootstrap-loader": "^2.1.0",
+        "chai": "^3.5.0",
+        "copy-webpack-plugin": "^4.0.1",
+        "css-loader": "^0.28.1",
+        "es3ify-loader": "^0.2.0",
+        "eslint": "^3.19.0",
+        "eslint-config-google": "^0.7.1",
+        "express": "^4.15.2",
+        "extract-text-webpack-plugin": "^2.1.0",
+        "file-loader": "^0.11.1",
+        "glob": "^7.1.1",
+        "happypack": "^3.0.3",
+        "html-loader": "^0.4.5",
+        "html-webpack-plugin": "^2.28.0",
+        "karma": "^1.7.0",
+        "karma-coverage": "^1.1.1",
+        "karma-mocha": "^1.3.0",
+        "karma-phantomjs-launcher": "^1.0.4",
+        "karma-webpack": "^2.0.3",
+        "mocha": "^3.4.1",
+        "node-sass": "^4.5.2",
+        "phantomjs-prebuilt": "^2.1.14",
+        "postcss-cssnext": "^2.11.0",
+        "postcss-loader": "^2.0.5",
+        "resolve-url-loader": "^2.0.2",
+        "rimraf": "^2.6.1",
+        "sass-loader": "^6.0.5",
+        "style-loader": "^0.17.0",
+        "text-loader": "0.0.1",
+        "uglify-js": "^2.6.4",
+        "uglifyjs-webpack-plugin": "^0.4.3",
+        "url-loader": "^0.5.8",
+        "webpack": "^2.5.1",
+        "webpack-dashboard": "^0.4.0",
+        "webpack-dev-middleware": "^1.10.2",
+        "webpack-dev-server": "^2.4.5",
+        "webpack-hot-middleware": "^2.18.0",
+        "webpack-md5-hash": "0.0.5",
+        "webpack-merge": "^4.1.0",
+        "webpack-visualizer-plugin": "^0.1.11"
+    },
+    "peerDependencies": {}
 }
